[package]
name = "class2json"
description = "Display Java Class files in JSON format."
version = "0.1.0"
authors = ["Matevž Fabjančič <mf6422@student.uni-lj.si>"]
license = "MIT"

repository = "https://github.com/MatevzFa/class2json"

[dependencies]
clap = {version = "2.31", features = ["yaml"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"